@@ -10,7 +10,7 @@ import com.fincity.saas.entity.processor.model.common.Identity;
 import com.fincity.saas.entity.processor.model.common.ProcessorAccess;
 import com.fincity.saas.entity.processor.model.response.BaseValueResponse;
 import com.fincity.saas.entity.processor.service.ProcessorMessageResourceService;
-import com.fincity.saas.entity.processor.service.ProductTemplateService;
+import com.fincity.saas.entity.processor.service.product.template.ProductTemplateService;
 import com.fincity.saas.entity.processor.util.NameUtil;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -21,7 +21,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.NavigableMap;
 import java.util.NavigableSet;
-import java.util.Objects;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.TreeSet;
@@ -30,23 +29,15 @@ import org.jooq.UpdatableRecord;
 import org.jooq.types.ULong;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
-import org.springframework.stereotype.Service;
 import reactor.core.publisher.Mono;
-import reactor.util.function.Tuple2;
 
-@Service
 public abstract class BaseValueService<
                 R extends UpdatableRecord<R>, D extends BaseValueDto<D>, O extends BaseValueDAO<R, D>>
         extends BaseUpdatableService<R, D, O> {
 
-    private static final String VALUE_ET_KEY = "valueEtKey";
     protected ProductTemplateService productTemplateService;
 
-    public String getValueEtKey() {
-        return VALUE_ET_KEY;
-    }
-
-    public abstract Mono<D> applyOrder(D entity, ProcessorAccess access);
+    protected abstract Mono<D> applyOrder(D entity, ProcessorAccess access);
 
     @Autowired
     private void setValueTemplateService(ProductTemplateService productTemplateService) {
@@ -54,68 +45,7 @@ public abstract class BaseValueService<
     }
 
     @Override
-    protected Mono<Boolean> evictCache(D entity) {
-        return Mono.zip(super.evictCache(entity), this.evictEtCache(entity), this.evictMapCache(entity))
-                .map(evicted -> evicted.getT1() && evicted.getT2() && evicted.getT3());
-    }
-
-    private Mono<Boolean> evictEtCache(D entity) {
-        return Mono.zip(
-                super.cacheService.evict(
-                        getCacheName(),
-                        super.getCacheKey(
-                                this.getValueEtKey(),
-                                entity.getAppCode(),
-                                entity.getClientCode(),
-                                entity.getPlatform(),
-                                entity.getProductTemplateId())),
-                super.cacheService.evict(
-                        getCacheName(),
-                        super.getCacheKey(
-                                this.getValueEtKey(),
-                                entity.getAppCode(),
-                                entity.getClientCode(),
-                                entity.getProductTemplateId())),
-                (pEvicted, evicted) -> pEvicted && evicted);
-    }
-
-    private Mono<Boolean> evictMapCache(D entity) {
-        return Mono.zip(
-                super.cacheService.evict(
-                        getCacheName(),
-                        super.getCacheKey(
-                                entity.getAppCode(),
-                                entity.getClientCode(),
-                                entity.getPlatform(),
-                                entity.getProductTemplateId())),
-                super.cacheService.evict(
-                        getCacheName(),
-                        super.getCacheKey(entity.getAppCode(), entity.getClientCode(), entity.getProductTemplateId())),
-                (pEvicted, evicted) -> pEvicted && evicted);
-    }
-
-    @Override
-    protected Mono<D> updatableEntity(D entity) {
-        return FlatMapUtil.flatMapMono(() -> super.updatableEntity(entity), existing -> {
-            existing.setIsParent(entity.getParentLevel0() == null && entity.getParentLevel1() == null);
-
-            if (Boolean.FALSE.equals(existing.getIsParent())) {
-                if ((entity.getParentLevel0() != null
-                                && entity.getParentLevel0().equals(existing.getId()))
-                        || (entity.getParentLevel1() != null
-                                && entity.getParentLevel1().equals(existing.getId()))) return Mono.just(existing);
-
-                existing.setParentLevel0(entity.getParentLevel0());
-                existing.setParentLevel1(entity.getParentLevel1());
-            }
-
-            existing.setOrder(entity.getOrder());
-
-            return Mono.just(existing);
-        });
-    }
-
-    private Mono<D> validateEntity(D entity, ProcessorAccess access) {
+    protected Mono<D> checkEntity(D entity, ProcessorAccess access) {
         return FlatMapUtil.flatMapMono(
                 () -> Mono.zip(
                         Boolean.TRUE.equals(entity.getIsParent())
@@ -156,10 +86,54 @@ public abstract class BaseValueService<
     }
 
     @Override
+    protected Mono<Boolean> evictCache(D entity) {
+        return Mono.zip(
+                super.evictCache(entity),
+                this.evictMapCache(entity),
+                (baseEvicted, mapEvicted) -> baseEvicted && mapEvicted);
+    }
+
+    private Mono<Boolean> evictMapCache(D entity) {
+        return Mono.zip(
+                super.cacheService.evict(
+                        getCacheName(),
+                        super.getCacheKey(
+                                entity.getAppCode(),
+                                entity.getClientCode(),
+                                entity.getPlatform(),
+                                entity.getProductTemplateId())),
+                super.cacheService.evict(
+                        getCacheName(),
+                        super.getCacheKey(entity.getAppCode(), entity.getClientCode(), entity.getProductTemplateId())),
+                (pEvicted, evicted) -> pEvicted && evicted);
+    }
+
+    @Override
+    protected Mono<D> updatableEntity(D entity) {
+        return FlatMapUtil.flatMapMono(() -> super.updatableEntity(entity), existing -> {
+            existing.setIsParent(entity.getParentLevel0() == null && entity.getParentLevel1() == null);
+
+            if (Boolean.FALSE.equals(existing.getIsParent())) {
+                if ((entity.getParentLevel0() != null
+                                && entity.getParentLevel0().equals(existing.getId()))
+                        || (entity.getParentLevel1() != null
+                                && entity.getParentLevel1().equals(existing.getId()))) return Mono.just(existing);
+
+                existing.setParentLevel0(entity.getParentLevel0());
+                existing.setParentLevel1(entity.getParentLevel1());
+            }
+
+            existing.setOrder(entity.getOrder());
+
+            return Mono.just(existing);
+        });
+    }
+
+    @Override
     public Mono<D> create(D entity) {
         return FlatMapUtil.flatMapMono(
                 super::hasAccess,
-                access -> this.validateEntity(entity, access),
+                access -> this.checkEntity(entity, access),
                 (access, vEntity) -> this.applyOrder(vEntity, access),
                 (access, vEntity, aEntity) -> {
                     aEntity.setIsParent(Boolean.TRUE);
@@ -169,49 +143,30 @@ public abstract class BaseValueService<
                 (access, vEntity, aEntity, cEntity) -> this.evictCache(cEntity).map(evicted -> cEntity));
     }
 
-    public Mono<D> createChild(ProcessorAccess access, D entity, D parentEntity) {
+    @Override
+    protected Mono<D> create(ProcessorAccess access, D entity) {
+        return FlatMapUtil.flatMapMono(
+                () -> this.checkEntity(entity, access),
+                vEntity -> this.applyOrder(vEntity, access),
+                (vEntity, aEntity) -> {
+                    aEntity.setIsParent(Boolean.TRUE);
 
-        return FlatMapUtil.flatMapMono(() -> this.validateEntity(entity, access), vEntity -> {
+                    return super.createInternal(access, aEntity);
+                },
+                (vEntity, aEntity, cEntity) -> this.evictCache(cEntity).map(evicted -> cEntity));
+    }
+
+    protected Mono<D> createChild(ProcessorAccess access, D entity, D parentEntity) {
+
+        return FlatMapUtil.flatMapMono(() -> this.checkEntity(entity, access), vEntity -> {
             entity.setIsParent(Boolean.FALSE);
             entity.setParentLevel0(parentEntity.getId());
 
             if (parentEntity.getParentLevel0() != null) entity.setParentLevel1(parentEntity.getParentLevel0());
 
-            return super.createInternal(access, entity);
+            return super.createInternal(access, entity)
+                    .flatMap(cEntity -> this.evictCache(cEntity).map(evicted -> cEntity));
         });
-    }
-
-    @Override
-    public Mono<D> update(D entity) {
-        return FlatMapUtil.flatMapMono(super::hasAccess, access -> this.updateInternal(access, entity));
-    }
-
-    public Mono<D> updateInternal(ProcessorAccess access, D entity) {
-        return this.validateEntity(entity, access).flatMap(this::updateInternal);
-    }
-
-    @Override
-    public Mono<D> update(ULong key, Map<String, Object> fields) {
-        return FlatMapUtil.flatMapMono(
-                super::hasAccess,
-                access -> key != null ? this.read(key) : Mono.empty(),
-                (access, entity) -> super.update(key, fields),
-                (access, entity, updated) ->
-                        this.evictCache(entity).map(evicted -> updated).switchIfEmpty(Mono.just(updated)));
-    }
-
-    public Mono<D> updateInternal(D entity) {
-        return FlatMapUtil.flatMapMono(
-                () -> super.update(entity), updated -> this.evictCache(entity).map(evicted -> updated));
-    }
-
-    @Override
-    public Mono<Integer> delete(ULong id) {
-        return FlatMapUtil.flatMapMono(
-                super::hasAccess,
-                access -> this.read(id),
-                (access, entity) -> super.delete(entity.getId()),
-                (access, entity, deleted) -> this.evictCache(entity).map(evicted -> deleted));
     }
 
     protected Mono<Boolean> existsById(
@@ -233,8 +188,7 @@ public abstract class BaseValueService<
             Platform platform, ULong productTemplateId, ULong parentId) {
         return FlatMapUtil.flatMapMono(
                         super::hasAccess,
-                        access -> this.getAllValuesInOrderInternal(
-                                access.getAppCode(), access.getClientCode(), platform, productTemplateId, parentId))
+                        access -> this.getAllValuesInOrderInternal(access, platform, productTemplateId, parentId))
                 .map(BaseValueResponse::toList)
                 .switchIfEmpty(Mono.just(new ArrayList<>()));
     }
@@ -243,14 +197,18 @@ public abstract class BaseValueService<
         return FlatMapUtil.flatMapMono(
                         super::hasAccess,
                         access -> this.getAllValues(
-                                access.getAppCode(), access.getClientCode(), platform, productTemplateId, parentId))
+                                access.getAppCode(),
+                                access.getEffectiveClientCode(),
+                                platform,
+                                productTemplateId,
+                                parentId))
                 .map(BaseValueResponse::toList)
                 .switchIfEmpty(Mono.just(new ArrayList<>()));
     }
 
     public Mono<NavigableMap<D, NavigableSet<D>>> getAllValuesInOrder(
-            String appCode, String clientCode, Platform platform, ULong productTemplateId) {
-        return this.getAllValuesInOrderInternal(appCode, clientCode, platform, productTemplateId)
+            ProcessorAccess access, Platform platform, ULong productTemplateId) {
+        return this.getAllValuesInOrderInternal(access, platform, productTemplateId)
                 .switchIfEmpty(this.msgService.throwMessage(
                         msg -> new GenericException(HttpStatus.NOT_FOUND, msg),
                         ProcessorMessageResourceService.NO_VALUES_FOUND,
@@ -259,8 +217,9 @@ public abstract class BaseValueService<
     }
 
     public Mono<NavigableMap<D, NavigableSet<D>>> getAllValuesInOrderInternal(
-            String appCode, String clientCode, Platform platform, ULong productTemplateId, ULong... parentIds) {
-        return this.getAllValues(appCode, clientCode, platform, productTemplateId, parentIds)
+            ProcessorAccess access, Platform platform, ULong productTemplateId, ULong... parentIds) {
+        return this.getAllValues(
+                        access.getAppCode(), access.getEffectiveClientCode(), platform, productTemplateId, parentIds)
                 .flatMap(map -> {
                     if (map == null || map.isEmpty()) return Mono.empty();
 
@@ -278,9 +237,8 @@ public abstract class BaseValueService<
                 });
     }
 
-    public Mono<Set<ULong>> getAllValueIds(
-            String appCode, String clientCode, Platform platform, ULong productTemplateId) {
-        return this.getAllValues(appCode, clientCode, platform, productTemplateId)
+    public Mono<Set<ULong>> getAllValueIds(ProcessorAccess access, Platform platform, ULong productTemplateId) {
+        return this.getAllValues(access.getAppCode(), access.getEffectiveClientCode(), platform, productTemplateId)
                 .map(map -> map.keySet().stream().map(D::getId).collect(Collectors.toSet()));
     }
 
@@ -289,12 +247,12 @@ public abstract class BaseValueService<
 
         if (parent == null || parent.isNull()) return Mono.empty();
 
-        return this.readIdentityWithAccess(access, parent).flatMap(pEntity -> {
+        return this.readByIdentity(access, parent).flatMap(pEntity -> {
             if (pEntity == null || !productTemplateId.equals(pEntity.getProductTemplateId())) return Mono.empty();
 
             if (child == null || child.isNull()) return Mono.just(Map.entry(pEntity, List.of()));
 
-            return this.readIdentityWithAccess(access, child).flatMap(cEntity -> {
+            return this.readByIdentity(access, child).flatMap(cEntity -> {
                 if (cEntity == null || !productTemplateId.equals(cEntity.getProductTemplateId()))
                     return Mono.just(Map.entry(pEntity, List.of()));
 
@@ -305,94 +263,89 @@ public abstract class BaseValueService<
         });
     }
 
-    public Mono<Map.Entry<D, Set<D>>> getValue(
+    protected Mono<Map.Entry<D, Set<D>>> getValue(
             String appCode, String clientCode, Platform platform, ULong productTemplateId, ULong parentId) {
 
         if (parentId == null) return Mono.empty();
 
         return this.getAllValues(appCode, clientCode, platform, productTemplateId, parentId)
-                .mapNotNull(map -> map.entrySet().stream()
+                .flatMap(map -> Mono.justOrEmpty(map.entrySet().stream()
                         .filter(entry -> parentId.equals(entry.getKey().getId()))
-                        .findFirst()
-                        .orElse(null));
+                        .findFirst()));
     }
 
-    public Mono<Map<D, Set<D>>> getAllValues(
+    protected Mono<Map<D, Set<D>>> getAllValues(
             String appCode, String clientCode, Platform platform, ULong productTemplateId, ULong... parentIds) {
 
-        if (parentIds == null
-                || parentIds.length == 0
-                || Arrays.stream(parentIds).allMatch(Objects::isNull))
+        if (parentIds == null || parentIds.length == 0)
             return this.getAllValues(appCode, clientCode, platform, productTemplateId);
 
-        Set<ULong> parents = Set.of(parentIds);
+        Set<ULong> parents = new HashSet<>(Arrays.asList(parentIds));
+        parents.remove(null);
+
+        if (parents.isEmpty()) return this.getAllValues(appCode, clientCode, platform, productTemplateId);
 
         return this.getAllValues(appCode, clientCode, platform, productTemplateId)
-                .map(values -> values.entrySet().stream()
-                        .filter(entry -> parents.contains(entry.getKey().getId()))
-                        .collect(Collectors.toMap(Map.Entry::getKey, Map.Entry::getValue)));
+                .map(values -> {
+                    Map<D, Set<D>> filtered = HashMap.newHashMap(parents.size());
+                    values.entrySet().stream()
+                            .filter(entry -> parents.contains(entry.getKey().getId()))
+                            .forEach(entry -> filtered.put(entry.getKey(), entry.getValue()));
+                    return filtered;
+                });
     }
 
     private Mono<Map<D, Set<D>>> getAllValues(
             String appCode, String clientCode, Platform platform, ULong productTemplateId) {
-        return this.cacheService.cacheValueOrGet(
-                this.getCacheName(),
-                () -> this.getAllValuesInternal(appCode, clientCode, platform, productTemplateId),
-                super.getCacheKey(this.getValueEtKey(), appCode, clientCode, platform, productTemplateId));
+        return this.getAllValueMap(appCode, clientCode, platform, productTemplateId)
+                .flatMap(this::processValuesAndBuildHierarchy);
     }
 
-    private Mono<Map<D, Set<D>>> getAllValuesInternal(
-            String appCode, String clientCode, Platform platform, ULong productTemplateId) {
-        return FlatMapUtil.flatMapMono(
-                () -> Mono.zip(
-                        this.dao.getAllValues(appCode, clientCode, platform, productTemplateId, null),
-                        this.getAllValueMap(appCode, clientCode, platform, productTemplateId)),
-                this::processValuesAndBuildHierarchy);
-    }
-
-    private Mono<Map<D, Set<D>>> processValuesAndBuildHierarchy(Tuple2<List<D>, Map<ULong, D>> tuple) {
+    private Mono<Map<D, Set<D>>> processValuesAndBuildHierarchy(Map<ULong, D> idToEntityMap) {
         Map<D, Set<D>> result = new HashMap<>();
-
-        Map<ULong, Set<D>> parentToChildrenMap = this.buildParentChildrenMap(tuple.getT1(), result);
-        this.linkParentsWithChildren(result, parentToChildrenMap);
-
-        return Mono.just(result);
-    }
-
-    private Map<ULong, Set<D>> buildParentChildrenMap(List<D> values, Map<D, Set<D>> result) {
         Map<ULong, Set<D>> parentToChildrenMap = new HashMap<>();
 
-        for (D value : values) {
-
-            this.addToParentMap(parentToChildrenMap, value.getParentLevel0(), value);
-            this.addToParentMap(parentToChildrenMap, value.getParentLevel1(), value);
-
+        for (D value : idToEntityMap.values()) {
             if (Boolean.TRUE.equals(value.getIsParent()) || !value.hasParentLevels())
                 result.put(value, new HashSet<>());
+
+            if (value.getParentLevel0() != null)
+                parentToChildrenMap
+                        .computeIfAbsent(value.getParentLevel0(), k -> new HashSet<>())
+                        .add(value);
+
+            if (value.getParentLevel1() != null)
+                parentToChildrenMap
+                        .computeIfAbsent(value.getParentLevel1(), k -> new HashSet<>())
+                        .add(value);
         }
 
-        return parentToChildrenMap;
-    }
+        parentToChildrenMap.forEach((parentId, children) -> {
+            D parent = idToEntityMap.get(parentId);
+            if (parent != null && result.containsKey(parent)) {
+                result.get(parent).addAll(children);
+            }
+        });
 
-    private void addToParentMap(Map<ULong, Set<D>> parentToChildrenMap, ULong parentId, D childValue) {
-        if (parentId != null)
-            parentToChildrenMap.computeIfAbsent(parentId, k -> new HashSet<>()).add(childValue);
-    }
-
-    private void linkParentsWithChildren(Map<D, Set<D>> result, Map<ULong, Set<D>> parentToChildrenMap) {
-        parentToChildrenMap.forEach((parentId, children) -> result.keySet().stream()
-                .filter(bv -> bv.getId().equals(parentId))
-                .findFirst()
-                .ifPresent(parentValue -> result.get(parentValue).addAll(children)));
+        return Mono.just(result);
     }
 
     private Mono<Map<ULong, D>> getAllValueMap(
             String appCode, String clientCode, Platform platform, ULong productTemplateId) {
         return this.cacheService.cacheValueOrGet(
                 this.getCacheName(),
-                () -> this.dao
-                        .getAllProductTemplates(appCode, clientCode, platform, productTemplateId)
+                () -> this.getValuesFlat(appCode, clientCode, platform, productTemplateId, null)
                         .map(BaseUpdatableDto::toIdMap),
                 super.getCacheKey(appCode, clientCode, platform, productTemplateId));
+    }
+
+    public Mono<List<D>> getValuesFlat(
+            String appCode,
+            String clientCode,
+            Platform platform,
+            ULong productTemplateId,
+            Boolean isParent,
+            ULong... valueEntityIds) {
+        return this.dao.getValues(appCode, clientCode, platform, productTemplateId, isParent, valueEntityIds);
     }
 }
